--- a/web-integration/package.json
+++ b/web-integration/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "fhevm": "^0.3.0",
+    "fhevmjs": "^0.3.2"
   }
 }
