--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mantine/core": "^7.3.2",
     "@rainbow-me/rainbowkit": "^1.3.1",
+    "@story-protocol/core-sdk": "^1.0.0-rc.12",
     "@tabler/icons-react": "^2.44.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
