--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-text-transition": "^3.1.0",
     "react-toastify": "^9.1.3",
+    "viem": "^1.21.4",
     "wagmi": "^1.3.3",
     "web-vitals": "^2.1.4"
   },
